--- a/index.html
+++ b/index.html
@@ -26,63 +26,440 @@
 
 
 
+
+
         <!---buttons-->
         <div class="buttons">
-            <button class="level-btn">Entry level</button>
-            <button class="level-btn">Mid-level</button>
-            <button class="level-btn">Senior-level</button>
+            <button class="level-btn" data-id="entry-level">Entry level</button>
+            <button class="level-btn" data-id="mid-level">Mid-level</button>
+            <button class="level-btn" data-id="senior-level">Senior-level</button>
         </div>
 
 
 
         <!---listings-->
-        <div class="listing-container">
 
-            <div class="boxes">
-                <img src="images/red-blue-logo.png" alt="a picture of a red and blue logo" class="company-logo">
+        <div class="section-center">
+            <div class="listing-container">
 
-                <!---job description div-->
-                <div class="title-div">
-                    <h5>Photosnap <img src="images/new-icon.png" alt="a small new icon" class="description-logo"></h5>
-                    <h4>Senior Frontend Developer</h4>
-                    <p>1d ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full Time&nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;UK
-                        only </p>
+
+
+
+                <!----start of box 1-->
+                <div class="boxes">
+                    <img src="images/red-blue-logo.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Photosnap <img src="images/new-icon.png" alt="a small new icon"
+                                class="description-logo"><button class="featured">Featured</button></h5>
+                        <h4>Senior Frontend Developer</h4>
+                        <p>1d ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full Time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp;UK
+                            only </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Frontend</div>
+                        <div class="skill-set">Senior</div>
+                        <div class="skill-set">HTML</div>
+                        <div class="skill-set">CSS</div>
+                        <div class="skill-set">Javascript</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+
+
+
+
                 </div>
-
-
-                <!---skill set div-->
-
+                <!--end of box one-->
 
 
 
 
+
+
+
+
+
+                <!----start of box 2-->
+                <div class="boxes">
+                    <img src="images/company-logo.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>iTone <img src="images/new-icon.png" alt="a small new icon" class="description-logo"><button
+                                class="featured">Featured</button></h5>
+                        <h4>Fullstack Developer</h4>
+                        <p>1d ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Part Time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp;Remote
+                            only </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Fullstack</div>
+                        <div class="skill-set">Python</div>
+                        <div class="skill-set">React</div>
+                        <div class="skill-set">Midweight</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box two-->
+
+
+
+
+
+                <!----start of box 3-->
+                <div class="boxes">
+                    <img src="images/company-logo2.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Manage<img src="images/new-icon.png" alt="a small new icon" class="description-logo"></h5>
+                        <h4>Junior Frontend Developer</h4>
+                        <p>5d ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Contract&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; UK only
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Frontend</div>
+                        <div class="skill-set">React</div>
+                        <div class="skill-set">Saas</div>
+                        <div class="skill-set">Javascript</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box three-->
+
+
+
+
+
+
+
+                <!----start of box 4-->
+                <div class="boxes">
+                    <img src="images/company-logo3.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Restful</h5>
+                        <h4>Software Engineer</h4>
+                        <p>1w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; Worldwide
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Fullstack</div>
+                        <div class="skill-set">Javascript</div>
+                        <div class="skill-set">Ruby</div>
+                        <div class="skill-set">Sass</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box four-->
+
+
+
+
+
+
+
+
+
+                <!----start of box 5-->
+                <div class="boxes">
+                    <img src="Images/company-logo4.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Optimal</h5>
+                        <h4>Junior Backend Developer</h4>
+                        <p>3w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; UK only
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Backend</div>
+                        <div class="skill-set">Junior</div>
+                        <div class="skill-set">Ruby</div>
+                        <div class="skill-set">Mongo</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box five-->
+
+
+
+
+
+
+
+
+
+                <!----start of box 6-->
+                <div class="boxes">
+                    <img src="Images/company-logo5.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Barcelle</h5>
+                        <h4>Junior Web Developer</h4>
+                        <p>3w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; UK only
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">HTML</div>
+                        <div class="skill-set">CSS</div>
+                        <div class="skill-set">PHP</div>
+                        <div class="skill-set">React</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box six-->
+
+
+
+
+
+                <!----start of box 7-->
+                <div class="boxes">
+                    <img src="Images/company-logo6.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Afitis</h5>
+                        <h4>Fullstack Engineer</h4>
+                        <p>2w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Part-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; Europe only
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Javascript</div>
+                        <div class="skill-set">Django</div>
+                        <div class="skill-set">Python</div>
+                        <div class="skill-set">React</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box six-->
+
+
+
+
+
+
+                <!----start of box 8-->
+                <div class="boxes">
+                    <img src="Images/company-logo7.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Tates</h5>
+                        <h4>Software Engineer</h4>
+                        <p>4w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; USA only
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Midweight</div>
+                        <div class="skill-set">Sass</div>
+                        <div class="skill-set">Ruby</div>
+                        <div class="skill-set">Fullstack</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box eight-->
+
+
+
+
+                <!----start of box 9-->
+                <div class="boxes">
+                    <img src="Images/company-logo8.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Arrow</h5>
+                        <h4>Backend Developer</h4>
+                        <p>5w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Full-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; UK - Remote only
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Java</div>
+                        <div class="skill-set">Git</div>
+                        <div class="skill-set">PHP</div>
+                        <div class="skill-set">CSS</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box nine-->
+
+
+
+
+
+
+
+                <!----start of box 10-->
+                <div class="boxes">
+                    <img src="Images/company-logo9.png" alt="a picture of a red and blue logo" class="company-logo">
+
+                    <!---job description div-->
+                    <div class="title-div">
+                        <h5>Green O</h5>
+                        <h4>Frontend Developer</h4>
+                        <p>3w ago &nbsp;&nbsp;&nbsp;• &nbsp;&nbsp;&nbsp;Part-time&nbsp;&nbsp;&nbsp;•
+                            &nbsp;&nbsp;&nbsp; Worldwide/remote
+                        </p>
+                    </div>
+                    <!----end of job description div-->
+
+
+
+
+                    <!---skill set div-->
+
+
+                    <div class="skill-container">
+                        <div class="skill-set">Html</div>
+                        <div class="skill-set">CSS</div>
+                        <div class="skill-set">Javscript</div>
+                        <div class="skill-set">Bootstrap</div>
+                    </div>
+
+                    <!---end of skill set div-->
+
+
+
+                </div>
+                <!--end of box ten-->
 
 
             </div>
-            <!--end of box one-->
+            <!---end of div-->
 
 
-
-
-
-            <div class="boxes">2</div>
-            <div class="boxes">3</div>
-            <div class="boxes">4</div>
-            <div class="boxes">5</div>
-            <div class="boxes">6</div>
-            <div class="boxes">7</div>
-            <div class="boxes">8</div>
-            <div class="boxes">9</div>
-            <div class="boxes">10</div>
 
         </div>
-        <!---end of div-->
+        <!---end of container div-->
 
 
 
 
 
     </main>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
