--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!---listings-->
 
         <div class="section-center">
-            <div class="listing-container">
+            <div class="listingcontainer">
 
 
 
@@ -459,7 +459,7 @@
 
     </main>
 
-    <script src="script.js"></script>
+
 </body>
 
 </html>
